# sms

./: .gitignore  Cargo.toml  docker-compose.yaml  justfile
.docs/: 001-setup.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  pagination.rs
crates/db/src/helpers/: generators.rs
crates/db/src/queries/: academic.rs  assessment.rs  attendance.rs  auth.rs  bulk.rs  communication.rs  fee.rs  mod.rs  parent.rs  school.rs  student.rs  system.rs  user.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/helpers/: api_responses.rs  create_update_dtos.rs  mod.rs  query_filters.rs  surreal_util.rs
crates/shared/src/models/: academic.rs  assessments_nd_grading.rs  attendance.rs  communication.rs  fee_management.rs  mod.rs  settings_and_configuration.rs  system_and_audit.rs
crates/web/: Cargo.toml
crates/web/src/: app.rs  lib.rs  main.rs
shared/src/: lib.rs
sms-back/: Cargo.toml
sms-back/src/: main.rs
sms-front/: Cargo.toml  README.md
sms-front/src/: app.rs  main.rs
