[package]
name = "api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"


[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

shared = { path = "../shared" }
listenfd = "1.0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["trace"] }
